--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: FRAN MARTINEZ PORTFOLIO
+description: FRAN MARTINEZ PORTFOLIO
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://franmaral.github.io/portfolio/
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
