--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: FRAN MARTINEZ PORTFOLIO
-description: FRAN MARTINEZ PORTFOLIO
+description: Fran Martinez Portfolio Page by Jekyll
 theme: just-the-docs
 
 url: https://franmaral.github.io/portfolio/
