--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FRAN MARTINEZ PORTFOLIO DOCS
+title: FRAN MARTINEZ PORTFOLIO
 description: Fran Martinez Portfolio by Jekyll
 theme: just-the-docs
 
